--- a/themes/hugo-devresume-theme/layouts/index.html
+++ b/themes/hugo-devresume-theme/layouts/index.html
@@ -40,6 +40,10 @@
                             {{ partial "projects.html" . }}
                             {{ end }}
 
+                            {{ if .Site.Params.extracurriculars.enable }}
+                            {{ partial "extracurriculars.html" . }}
+                            {{ end }}
+                            
                             {{ if .Site.Params.information.enable }}
                             {{ partial "information.html" . }}
                             {{ end }}
